@@ -1,3 +1,8 @@
+2012-08-01  Ulrich Weigand  <ulrich.weigand@linaro.org>
+
+	* arm-linux-nat.c (arm_linux_hw_breakpoint_initialize): Do not
+	attempt to 4-byte-align HW breakpoint addresses for Thumb.
+
 2012-07-31  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* ppc-linux-tdep.c (ppc_linux_init_abi): Register
